5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1798_2573.log
== TEST (2019-06-04 23:58:27) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Peso")))
vet2 = array(eval(input("Altura")))

vet = arrange
vet = vet1/vet2 * vet*2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:58:36) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Peso:")))
vet2 = array(eval(input("Altura:")))

vet = arrange
vet = vet1/vet2 * vet*2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:59:07) 
-- CODE:
from numpy import*

vet1 = array(eval(input("Peso:")))
vet2 = array(eval(input("Altura:")))

vet = vet1/vet2 * vet*2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:22:15) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
a = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print(imc.max())
if (imc.max()) < 17:
	print("muito abaixo do peso")
elif (imc.max())>=17 and <=17.49 
	print("muito abaixo do peso")


	




-- ERROR:
File "XXXX", line 12
    elif (imc.max())>=17 and <=17.49 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:22:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
a = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print(imc.max())
if (imc.max()) < 17:
	print("muito abaixo do peso")
elif (imc.max())>=17 and <=17.49 
	print("muito abaixo do peso")



	




-- ERROR:
File "XXXX", line 12
    elif (imc.max())>=17 and <=17.49 
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:24:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
a = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print(imc.max())
if (imc.max())<=17:
	print("muito abaixo do peso")
elif (imc.max())>=17:
	print("abaixo do peso")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:16) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
a = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max()<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")




	
	
	
	




	




-- ERROR:
File "XXXX", line 20
    elif(imc.max()<=39.99:
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
a = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")




	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:33:56) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")



	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:34:18) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")



	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:34:42) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")



	
	
	
	




	




-- EXECUTION TIME:
1.26747
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:34:49) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")



	
	
	
	




	




-- EXECUTION TIME:
1.12418
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:34:52) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")



	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:35:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.1389
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:35:39) 
-- CODE:
from numpy import*
from numpy as np
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
File "XXXX", line 2
    from numpy as np
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:35:50) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
0.995347
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:36:16) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:36:25) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.20087
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:37:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:37:36) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.20246
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:37:43) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print(imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:38:53) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)
for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
0.961538
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:38:56) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:39:36) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:39:47) 
-- CODE:
from numpy import*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
0.953442
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:39:55) 
-- CODE:
from numpy import*
from numpy as np*
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
File "XXXX", line 2
    from numpy as np*
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:40:04) 
-- CODE:
from numpy import*
from math as np
v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
File "XXXX", line 2
    from math as np
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round (v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
0.86683
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:40:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:40:59) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.29005
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:03) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for imc in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:42:10) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for imc in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.03522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:14) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * v2[i]),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:24) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2 ,2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
File "XXXX", line 9
    print(imc)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:35) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:42:41) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	  print("OBESIDADE MORBIDA")

	
	
	
	




	




-- EXECUTION TIME:
1.25695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:45:19) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:45:24) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
0.763518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:45:34) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())>=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
1.12119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:46:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif(imc.max())>=40:
	print("OBESIDADE MORBIDA)
	
	
	
	




	




-- ERROR:
File "XXXX", line 25
    print("OBESIDADE MORBIDA)
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:46:19) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif(imc.max())>=40:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:46:24) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif(imc.max())>=40:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
1.10252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:46:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:46:45) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
1.07355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:46:57) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:47:01) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
0.956719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:48:18) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif(imc.max())>=40:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:48:23) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif(imc.max())>=40:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
0.872796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:48:41) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:48:45) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- EXECUTION TIME:
0.956786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 8, in <module>
    imc[i] = round(v1[i]/(v2[i] * 2,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:49:14) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2,2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:49:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2))
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:50:17) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:39) 
-- CODE:
from numpy import*

v1 = array(eval(input("")))
v2 = array(eval(input("")))
imc = zeros(size(v1), dtype=float)

for i in range(len(v1)):
	imc[i] = round(v1[i]/(v2[i] * 2),2)
print(imc)
print("O MAIOR IMC DA TURMA EH: ", imc.max())
print (imc.max())
if (imc.max())<=17:
	print("MUITO ABAIXO DO PESO")
elif (imc.max())<=18.49:
	print("ABAIXO DO PESO")
elif (imc.max())<=24.99:
	print("PESO NORMAL")
elif (imc.max())<=29.99:
	print("ACIMA DO PESO")
elif (imc.max())<=34.99:
	print("OBESIDADE")
elif(imc.max())<=39.99:
	print("OBESIDADE SEVERA")
elif (imc.max())>40:
	print("OBESIDADE MORBIDA")
	
	
	
	




	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
